[package]
name = "drift-rs"
version = "0.1.0"
edition = "2021"
authors = ["Karl Hill <karlhillx@gmail.com>"]
description = "A fast, lightweight Drift telemetry and simulation data sink for aerospace and satellite ops."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
